Prueba - Cambio global de font-family

--- a/app.css
+++ b/app.css
@@ -1,5 +1,5 @@
-body {
-	font-family: 'Reem Kufi', sans-serif !important;
+* {
+	font-family: 'Open Sans';
 }
 
 .button:link,
@@ -12,7 +12,6 @@ footer {
 }
 
 tr td {
-	font-family: 'Open Sans';
 	border-radius: 10px;
 	/*border: 1px gray dotted;*/
 }
